# c_rust_strings

./: .gitignore  Cargo.toml  build.sh
csrc/: .gitignore  main.c
src/: lib.rs  main.rs
