[package]
name = "testlib"
version = "0.1.0"
authors = ["Jonathan Lindsey <example@example.com>"]
edition = "2018"

[lib]
name = "testlib"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"

[build-dependencies]
cbindgen = "0.13"